monticore-grammar/src/test/resources/de/monticore/javalight/cocos/valid/A0819.java
/* (c) https://github.com/MontiCore/monticore */
public strictfp method(){}
