monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0819/A0819.java
/* (c) https://github.com/MontiCore/monticore */
native strictfp void method() {}
